manual performance test: compare 'no change' to 'one change'
+review REVIEW-5611